@@ -1,3 +1,8 @@
+2002-01-21  Miguel de Icaza  <miguel@ximian.com>
+
+	* ecore.cs (FieldExpr.Emit): Handle initonly fields specially: we
+	need to make a copy of the variable to generate verifiable code.
+
 2002-01-19  Miguel de Icaza  <miguel@ximian.com>
 
 	* driver.cs: Compute dynamically the system directory.
